--- a/Eunis/Eunis.csproj
+++ b/Eunis/Eunis.csproj
@@ -7,11 +7,13 @@
 
   <ItemGroup>
     <Folder Include="Infrastructure\Repositories\" />
-    <Folder Include="Services\" />
+    <Folder Include="Infrastructure\Services\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.20" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.18" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.7.0" />
   </ItemGroup>
